; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/musb/extr_sunxi.c_sunxi_musb_set_vbus.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/musb/extr_sunxi.c_sunxi_musb_set_vbus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.musb = type { %struct.TYPE_6__*, %struct.TYPE_4__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }
%struct.sunxi_glue = type { i32, i32 }

@SUNXI_MUSB_FL_VBUS_ON = common dso_local global i32 0, align 4
@OTG_STATE_A_WAIT_VRISE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.musb*, i32)* @sunxi_musb_set_vbus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sunxi_musb_set_vbus(%struct.musb* %0, i32 %1) #0 {
  %3 = alloca %struct.musb*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sunxi_glue*, align 8
  store %struct.musb* %0, %struct.musb** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.musb*, %struct.musb** %3, align 8
  %7 = getelementptr inbounds %struct.musb, %struct.musb* %6, i32 0, i32 1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.sunxi_glue* @dev_get_drvdata(i32 %10)
  store %struct.sunxi_glue* %11, %struct.sunxi_glue** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %26

14:                                               ; preds = %2
  %15 = load i32, i32* @SUNXI_MUSB_FL_VBUS_ON, align 4
  %16 = load %struct.sunxi_glue*, %struct.sunxi_glue** %5, align 8
  %17 = getelementptr inbounds %struct.sunxi_glue, %struct.sunxi_glue* %16, i32 0, i32 1
  %18 = call i32 @set_bit(i32 %15, i32* %17)
  %19 = load i32, i32* @OTG_STATE_A_WAIT_VRISE, align 4
  %20 = load %struct.musb*, %struct.musb** %3, align 8
  %21 = getelementptr inbounds %struct.musb, %struct.musb* %20, i32 0, i32 0
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  store i32 %19, i32* %25, align 4
  br label %31

26:                                               ; preds = %2
  %27 = load i32, i32* @SUNXI_MUSB_FL_VBUS_ON, align 4
  %28 = load %struct.sunxi_glue*, %struct.sunxi_glue** %5, align 8
  %29 = getelementptr inbounds %struct.sunxi_glue, %struct.sunxi_glue* %28, i32 0, i32 1
  %30 = call i32 @clear_bit(i32 %27, i32* %29)
  br label %31

31:                                               ; preds = %26, %14
  %32 = load %struct.sunxi_glue*, %struct.sunxi_glue** %5, align 8
  %33 = getelementptr inbounds %struct.sunxi_glue, %struct.sunxi_glue* %32, i32 0, i32 0
  %34 = call i32 @schedule_work(i32* %33)
  ret void
}

declare dso_local %struct.sunxi_glue* @dev_get_drvdata(i32) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
